# VisualizzazioneControlli

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
flask_backend/: app.py  app_v2.py  config.py  db.py
script/: create_json_candidature.py
streamlit_frontend/: config_manager.py  streamlit_app.py  streamlit_app_v2.py
