[tool.poetry]
name = "visualizzazionecontrolli"
version = "0.1.0"
description = "Codice per la visualizzazione dei controlli formali"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.36.0"
streamlit-aggrid = "^1.0.5"
pyarrow = "^17.0.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
